# donIV-cli

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ubuntu-linux-cmake.yml
donIV/: CMakeLists.txt
donIV/include/: inject.hpp  process.hpp  ptrace.hpp  syscalls.hpp
donIV/shellcode/: CMakeLists.txt  bin2cppheader.py  dlopen_shellcode.s
donIV/src/: inject.cpp  process.cpp  ptrace.cpp
include/: cli.hpp
src/: cli.cpp  main.cpp
